Fix for dropdown not showing scroll when zoom in (#2002)

--- a/AngularApp/projects/app-service-diagnostics/src/styles.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles.scss
@@ -49,10 +49,6 @@ fab-command-bar .ms-SearchBox {
     width: 270px;
 }
 
-.ms-Callout-container .ms-Callout-main {
-    overflow-y: hidden!important;
-}
-
 
 .ms-Callout-container fab-date-picker {
     padding-right:0px!important;
